--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/webp" href="/favicon.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pokemon TCG Wonder Pick</title>
+    <title>Wonder Pick - Pokémon TCG Pocket</title>
   </head>
   <body>
     <div id="root"></div>
